crates/rome_js_formatter/tests/specs/prettier/typescript/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMethodInNonAbstractClass.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 119
expression: classAbstractMethodInNonAbstractClass.ts

---
# Input
```js
class A {
    abstract foo();
}
```

# Output
```js
class A {
  abstract foo();
}

```

# Errors
```
error[SyntaxError]: Only abstract classes can have abstract members
  ┌─ classAbstractMethodInNonAbstractClass.ts:2:5
  │
2 │     abstract foo();
  │     ^^^^^^^^


```


